--- a/caykimnho_studio/Views/Shared/_Layout.cshtml
+++ b/caykimnho_studio/Views/Shared/_Layout.cshtml
@@ -339,7 +339,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="header_top_inner d-flex justify-content-between align-items-center">
-                            <div class="header_contact_info">
+                            <div class="header_contact_info" style="width: 320px">
                                 <ul class="d-flex">
                                     <li class="text-white">
                                         <i class="icons icon-phone"></i> <a href="tel:0971568656">0971 568 656</a>
@@ -358,8 +358,8 @@
                                     <p class="text-white">PHÁT VOUCHER SIÊU ƯU ĐÃI MỖI NGÀY</p>
                                 </div>
                             </div>
-                            <div class="header_top_sidebar d-flex align-items-center">
-                                <div class="header_social d-flex">
+                            <div class="header_top_sidebar d-flex align-items-center" style="width: 320px">
+                                <div class="header_social d-flex" style="justify-content: end; width: 100%;">
                                     <ul class="d-flex">
                                         <li>
                                             <a target="_blank"
@@ -416,9 +416,9 @@
                                         </li>
                                         <li><a href="@Url.Action("about", "home")">Giới thiệu</a></li>
 
-                                        <li><a href="#">Khuyến Mãi</a></li>
+                                        @*<li><a href="#">Khuyến Mãi</a></li>
                                         <li><a href="#">Đổi trả</a></li>
-                                        <li><a href="#">đơn hàng</a></li>
+                                        <li><a href="#">đơn hàng</a></li>*@
                                     </ul>
                                 </nav>
                             </div>
@@ -434,9 +434,8 @@
                                             <i class="icon-user icons"></i>
                                         </a>
                                         <ul class="dropdown_account_link">
-                                            <li><a href="#">My Account</a></li>
-                                            <li><a href="#">Login</a></li>
-                                            <li><a href="#">Contact</a></li>
+                                            <li><a href="#">Đăng nhập</a></li>
+                                            <li><a href="#">Đăng ký</a></li>
                                         </ul>
                                     </li>
                                     <li style="margin-right: 5px;" class="shopping_cart">
@@ -485,7 +484,8 @@
                             <div class="footer_contact_list">
                                 <P>
                                     <span>Địa Chỉ Shop:</span>
-                                    77 Lý Phục Man, P. Bình Thuận, Q7, HCM
+                                    Mua hàng Online qua Instagram: <a target="_blank" href="https://ig.me/m/caykimnho">@("@")caykimnho</a>
+                                    
                                 </P>
                             </div>
                             <div class="footer_contact_list">
