--- a/caykimnho_studio/Views/Home/_productQuickView.cshtml
+++ b/caykimnho_studio/Views/Home/_productQuickView.cshtml
@@ -12,7 +12,7 @@
                         <div class="zoom_tab_img">
                             @foreach (var image in images)
                             {
-                                <a id="targetImages-@image.Split('=')[2]" class="zoom_tabimg_list" href="javascript:void(0)"><img src="@image" alt="tab-thumb"></a>
+                                <a id="targetImages-@image" class="zoom_tabimg_list" href="javascript:void(0)"><img src="@image" alt="tab-thumb"></a>
                             }
                         </div>
                         <div class="product_zoom_main_img">
@@ -74,7 +74,7 @@
                                 @foreach (var items in Model.DetailProducts.ToList())
                                 {
                                     <li>
-                                        <label data-images="@items.Images.Split('=')[2]" class="checkmark color3" name="@items.Colors.ID" id="checkmaulabel-@items.Colors.ID">@items.Colors.Name</label>
+                                        <label data-images="@items.Images" class="checkmark color3" name="@items.Colors.ID" id="checkmaulabel-@items.Colors.ID">@items.Colors.Name</label>
                                         <input hidden id="valuecolor" value="" />
                                     </li>
                                 }
